@@ -1,0 +1,71 @@
+{
+   "abstract" : "SRU server backed by a searchable Catmandu::Store",
+   "author" : [
+      "Nicolas Steenlant, C<< <nicolas.steenlant at ugent.be> >>"
+   ],
+   "dynamic_config" : 0,
+   "generated_by" : "Dist::Milla version v1.0.4, Dist::Zilla version 5.006, CPAN::Meta::Converter version 2.131560",
+   "license" : [
+      "perl_5"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : "2"
+   },
+   "name" : "Dancer-Plugin-Catmandu-SRU",
+   "no_index" : {
+      "directory" : [
+         "t",
+         "xt",
+         "inc",
+         "share",
+         "eg",
+         "examples"
+      ]
+   },
+   "prereqs" : {
+      "configure" : {
+         "requires" : {
+            "Module::Build::Tiny" : "0.030"
+         }
+      },
+      "develop" : {
+         "requires" : {
+            "Test::Pod" : "1.41"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "Catmandu" : "0.8014",
+            "Catmandu::Exporter::Template" : "0.03",
+            "Dancer" : "1.3123",
+            "SRU" : "1.01",
+            "perl" : "v5.10.1"
+         }
+      },
+      "test" : {
+         "requires" : {
+            "Dancer::Test" : "1.3123",
+            "Test::More" : "0.88"
+         }
+      }
+   },
+   "release_status" : "stable",
+   "resources" : {
+      "bugtracker" : {
+         "web" : "https://github.com/vpeil/Dancer-Plugin-Catmandu-SRU/issues"
+      },
+      "homepage" : "https://github.com/vpeil/Dancer-Plugin-Catmandu-SRU",
+      "repository" : {
+         "type" : "git",
+         "url" : "https://github.com/vpeil/Dancer-Plugin-Catmandu-SRU.git",
+         "web" : "https://github.com/vpeil/Dancer-Plugin-Catmandu-SRU"
+      }
+   },
+   "version" : "0.02",
+   "x_contributors" : [
+      "Nicolas Steenlant <nicolas.steenlant@ugent.be>",
+      "vpeil <vitali.peil@uni-bielefeld.de>"
+   ]
+}
+
